--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
 		<nav class="navbar flex items-center" aria-label="Main Navigation">
 			<a class="sr-only" href="#content">Skip to main content</a>
 			<div class="navbar__branding mr-2">
-				{{ if .Site.Params.header.logo }}
+				{{ if .Site.Params.header.log }}
 				<a class="navbar__logo m-0" href="{{ "/" | relURL }}"><img src="{{ $.Site.Params.header.logo | relURL }}" alt="{{ $.Site.Params.header.logo_alt }}" /></a>
 				{{ else }}
 				<a class="navbar__title h4 m-0" href='{{ "/" | relURL }}'>{{ $.Site.Params.header.title }}</a>
