--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,8 @@
 				{{ if .Site.Params.header.log }}
 				<a class="navbar__logo m-0" href="{{ "/" | relURL }}"><img src="{{ $.Site.Params.header.logo | relURL }}" alt="{{ $.Site.Params.header.logo_alt }}" /></a>
 				{{ else }}
-				<a class="navbar__title h4 m-0" href='{{ "/" | relURL }}'>{{ $.Site.Params.header.title }}</a>
+				<a class="navbar__title h4 m-0" href='{{ "/" | relURL }}'>{{ $.Site.Params.header.eka }}  | </a>
+				<a class="navbar__title h9 m-0" href='{{ "/" | relURL }}'>BBB </a>
 				{{ end }}
 			</div>
 			{{ if or .Site.Params.header.has_primary_nav .Site.Params.header.has_secondary_nav }}
